# DataInsightAI

./: .gitignore  README.md  docker-compose.yml  package-lock.json  railway.json
apps/api/: .env.example  Dockerfile  pyproject.toml  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: auth.py  config.py  main.py
apps/api/app/db/: models.py  session.py
apps/api/app/routers/: analyses.py  datasets.py  projects.py
apps/api/app/schemas/: analyses.py  datasets.py  insights.py  predictions.py  projects.py
apps/api/app/services/: forecasting.py  insights_llm.py  ml_baseline.py  profiling.py  report.py
apps/api/app/storage/: supabase_client.py
apps/api/app/workers/: celery_app.py  tasks.py
apps/api/tests/: test_insights_llm.py  test_profiling.py  test_report.py
apps/web/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/components/: providers.tsx
apps/web/src/components/charts/: BarChartComp.tsx  ChartCard.tsx  ChartGrid.tsx  HeatmapChart.tsx  HistogramChart.tsx  LineChartComp.tsx  ScatterChartComp.tsx
apps/web/src/components/insights/: InsightCard.tsx  InsightsPanel.tsx
apps/web/src/components/predictions/: FeatureImportance.tsx  ForecastChart.tsx  PredictionsPanel.tsx
apps/web/src/components/upload/: Dropzone.tsx
apps/web/src/lib/: api.ts  queries.ts
apps/web/src/types/: api.ts
(+5 files in other folders)
